--- a/DEPARTMENT-SERVICE.properties
+++ b/DEPARTMENT-SERVICE.properties
@@ -3,5 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=tarale123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.boot.message = "hi this is batman"
 server.port=8081
 eureka.instance.client.serverurl.defaultzone = http://localhost:8761/eureka/
