--- a/EMPLOYEE-SERVICE.properties
+++ b/EMPLOYEE-SERVICE.properties
@@ -5,3 +5,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8082
 eureka.instance.client.serverurl.defaultzone = http://localhost:8761/eureka/
+spring.boot.message = "hi this is employee batman"
